--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -19,7 +19,7 @@ jobs:
     # Nainštaluje sa na prostredí a cez to sa to potom spúšťa.
     runs-on: ubuntu-latest
     steps:
-      – name: Print greeting
+      - name: Print greeting
         run: echo "Hello World"
-      – name: Print goodbye
+      - name: Print goodbye
         run: echo "Done – bye!"
